<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="STRING_5K" Id="{171bcfe8-4034-4fb2-8c68-3535e56f424b}">
    <Declaration><![CDATA[TYPE STRING_5K : STRING(5000); END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>