<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="BundleData" Id="{a50ee9f0-000e-495c-bb7c-a1a82e094855}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//HMI RECIPE
	id : STRING;
	weight : REAL;
	
	length : REAL;
	height : REAL;
	width : REAL;
	
	pieces : USINT;
	piecesHeight : USINT;
	piecesWidth : USINT;
	
	requiredProcessing : ARRAY[0..3] OF BOOL;
	//IF AUTO_SS is selected then allow access to warp and strap recipe creation

END_VAR
VAR_GLOBAL CONSTANT
	AUTO_RE : INT := 0;
	AUTO_SS : INT := 1;
	MANUAL_RE : INT := 2;
	MANUAL_SS : INT := 3;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>